feat(seo): adiciona metadados globais e linka documentacao no menu principal

--- a/app-traffixor/index.html
+++ b/app-traffixor/index.html
@@ -1,10 +1,24 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>app-traffixor</title>
+    
+    <title>Traffixor | Automação Avançada para Escalar Operações</title>
+    <meta name="description" content="A infraestrutura definitiva para B2B e Infoprodutores. Elimine gargalos manuais e acelere seu faturamento com inteligência artificial." />
+    <meta name="author" content="Traffixor" />
+    <meta name="theme-color" content="#10b981" /> <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://traffixor.com.br/" />
+    <meta property="og:title" content="Traffixor | Motor Neural v3.0" />
+    <meta property="og:description" content="Orquestrando o futuro do marketing digital através de automação neural. Foque no lucro, nós automatizamos o resto." />
+    <meta property="og:image" content="https://traffixor-web.vercel.app/preview-image.jpg" /> 
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://traffixor.com.br/" />
+    <meta property="twitter:title" content="Traffixor | Motor Neural v3.0" />
+    <meta property="twitter:description" content="A infraestrutura definitiva para B2B e Infoprodutores." />
+    <meta property="twitter:image" content="https://traffixor-web.vercel.app/preview-image.jpg" />
   </head>
   <body>
     <div id="root"></div>
